Compiler fixes for GCC with -Os

ASTERISK-29145

Change-Id: I9af705f2b9725c53141aef5d0ff512a1800f073c